Add initial terraform

--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -23,6 +23,15 @@ stages:
               steps:
                 - checkout: self
 
+                - template: jobs/terraform-validate-and-plan.yml@ado-pipeline-templates
+                  parameters:
+                    terraform-folder: 'terraform'
+                    terraform-var-file: 'tfvars/${{ parameters.environmentName }}.tfvars'
+                    terraform-backend-file: 'backends/${{ parameters.environmentName }}.backend.hcl'
+                    AZURE_CLIENT_ID: $(AZURE_CLIENT_ID)
+                    AZURE_TENANT_ID: $(AZURE_TENANT_ID)
+                    AZURE_SUBSCRIPTION_ID: $(AZURE_SUBSCRIPTION_ID)
+
       - deployment: 'DeployToVirtualMachine'
         environment:
           name: ${{ parameters.vmEnvironment }}
