--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -14,6 +14,9 @@ stages:
     - deployment: deploy_${{ parameters.environmentName }}
       environment: ${{ parameters.azureEnvironment }}
 
+      variables:
+      - group: ${{ parameters.azureEnvironment }}
+
       workspace:
         clean: all
 
