--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -52,3 +52,9 @@ stages:
                   targetType: 'inline'
                   script: |
                     Write-Host "Running on $($env:COMPUTERNAME)"
+
+              - task: PowerShell@2
+                inputs:
+                  filePath: '../scripts/configure_bot_environment.ps1'
+                  arguments: '-environment ${{ parameters.environmentName }}'
+                  
