--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -30,7 +30,7 @@ stages:
                 parameters:
                   azureSubscription: "${{ parameters.azureSubscription }}"
                   terraformFolder: 'terraform'
-                  terraformVarFile: 'tfvars/${{ parameters.environmentName }}.tfvars'
+                  terraformVarFile: 'tfvars/${{ parameters.environmentName }}.tfvars.json'
                   backendResourceGroupName: '$(TF_BACKEND_RESOURCE_GROUP)'
                   backendStorageAccountName: '$(TF_BACKEND_STORAGE_ACCOUNT)'
                   backendContainerName: '$(TF_BACKEND_STORAGE_CONTAINER)'
