--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -61,12 +61,14 @@ stages:
 
               - task: PowerShell@2
                 inputs:
+                  pwsh: true
                   targetType: 'inline'
                   script: |
                     Write-Host "Running on $($env:COMPUTERNAME)"
 
               - task: PowerShell@2
                 inputs:
+                  pwsh: true
                   filePath: 'scripts/configure_bot_environment.ps1'
                   arguments: '-sourceWorkingDirectory "$(System.DefaultWorkingDirectory)" -environment "${{ parameters.environmentName }}" -client_app_id "$(client_app_id)" -client_app_secret "$(client_app_secret)" -repository_subscription_key "$(repository_subscription_key)" -event_ingest_subscription_key "$(event_ingest_subscription_key)"'
                   
