--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -35,6 +35,10 @@ stages:
                   backendStorageAccountName: '$(TF_BACKEND_STORAGE_ACCOUNT)'
                   backendContainerName: '$(TF_BACKEND_STORAGE_CONTAINER)'
                   backendKey: '$(TF_BACKEND_STORAGE_STATE_KEY)'
+                  AZURE_CLIENT_ID: '$(AZURE_CLIENT_ID)'
+                  AZURE_TENANT_ID: '$(AZURE_TENANT_ID)'
+                  AZURE_SUBSCRIPTION_ID: '$(AZURE_SUBSCRIPTION_ID)'
+
 
     - deployment: 'DeployToVirtualMachine'
       dependsOn: deploy_terraform
