--- a/.azure-pipelines/release-to-production.yml
+++ b/.azure-pipelines/release-to-production.yml
@@ -3,6 +3,14 @@ trigger:
     include:
       - "main"
 
+schedules:
+- cron: '0 0 * * *'
+  displayName: Daily midnight run
+  branches:
+    include:
+    - main
+  always: true
+
 pr: none
 
 pool:
