Update pipeline schedules and triggers to enforce main branch usage and adjust cron timings

--- a/.azure-pipelines/release-to-production.yml
+++ b/.azure-pipelines/release-to-production.yml
@@ -1,15 +1,15 @@
 trigger:
   branches:
     include:
-      - "main"
+      - main
 
 schedules:
-- cron: '0 0 * * *'
-  displayName: Daily midnight run
-  branches:
-    include:
-    - main
-  always: true
+  - cron: "0 3 * * 4"
+    displayName: "Weekly Release (Thu 03:00 UTC)"
+    branches:
+      include:
+        - main
+    always: true
 
 pr: none
 
