Add spool directory handling and configuration to bot environment scripts

--- a/src/conf_templates/plugin_portal_gameType_serverId.ini
+++ b/src/conf_templates/plugin_portal_gameType_serverId.ini
@@ -12,3 +12,4 @@ clientSecret: __CLIENT_SECRET__
 apiSubscriptionKey: __API_SUBSCRIPTION_KEY__
 scope: __SCOPE__
 pemFilePath: __PEM_FILE_PATH__
+spoolPath: __SPOOL_PATH__
