Add event ingest API audience output and update deployment scripts

--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -45,6 +45,8 @@ stages:
         value: $[ dependencies.deploy_terraform.outputs['deploy_terraform.terraform_output.repository_subscription_key'] ]
       - name: event_ingest_subscription_key
         value: $[ dependencies.deploy_terraform.outputs['deploy_terraform.terraform_output.event_ingest_subscription_key'] ]
+      - name: event_ingest_api_audience
+        value: $[ dependencies.deploy_terraform.outputs['deploy_terraform.terraform_output.event_ingest_api_audience'] ]
       - name: mysql_connection_string
         value: $[ dependencies.deploy_terraform.outputs['deploy_terraform.terraform_output.mysql_connection_string'] ]
 
@@ -69,5 +71,5 @@ stages:
                 inputs:
                   pwsh: true
                   filePath: 'scripts/Deploy-BotEnvironment.ps1'
-                  arguments: '-sourceWorkingDirectory "$(System.DefaultWorkingDirectory)" -environment "${{ parameters.environmentName }}" -client_app_id "$(client_app_id)" -client_app_secret "$(client_app_secret)" -repository_subscription_key "$(repository_subscription_key)" -event_ingest_subscription_key "$(event_ingest_subscription_key)" -mysql_connection_string "$(mysql_connection_string)"'
+                  arguments: '-sourceWorkingDirectory "$(System.DefaultWorkingDirectory)" -environment "${{ parameters.environmentName }}" -client_app_id "$(client_app_id)" -client_app_secret "$(client_app_secret)" -repository_subscription_key "$(repository_subscription_key)" -event_ingest_subscription_key "$(event_ingest_subscription_key)" -event_ingest_application_audience "$(event_ingest_api_audience)" -mysql_connection_string "$(mysql_connection_string)"'
                   
