Refactor deployment script arguments for improved readability and maintainability

--- a/.azure-pipelines/templates/deploy-environment.yml
+++ b/.azure-pipelines/templates/deploy-environment.yml
@@ -73,5 +73,14 @@ stages:
                 inputs:
                   pwsh: true
                   filePath: 'scripts/Deploy-BotEnvironment.ps1'
-                  arguments: '-sourceWorkingDirectory "$(System.DefaultWorkingDirectory)" -environment "${{ parameters.environmentName }}" -clientAppId "$(client_app_id)" -clientAppSecret "$(client_app_secret)" -repositoryApplicationAudience "$(repository_api_audience)" -eventIngestApplicationAudience "$(event_ingest_api_audience)" -mysqlConnectionString "$(mysql_connection_string)" -repositoryApiBaseUrl "$(repository_api_base_url)" -eventIngestApiBaseUrl "$(event_ingest_api_base_url)"'
+                  arguments: >-
+                    -sourceWorkingDirectory "`$(System.DefaultWorkingDirectory)`"
+                    -environment "${{ parameters.environmentName }}"
+                    -clientAppId "$(client_app_id)"
+                    -clientAppSecret "$(client_app_secret)"
+                    -repositoryApplicationAudience "$(repository_api_audience)"
+                    -eventIngestApplicationAudience "$(event_ingest_api_audience)"
+                    -mysqlConnectionString "$(mysql_connection_string)"
+                    -repositoryApiBaseUrl "$(repository_api_base_url)"
+                    -eventIngestApiBaseUrl "$(event_ingest_api_base_url)"
                   
